# CloudAnalyzer

./: .gitignore  CHANGELOG.md  Dockerfile  PLAN.md  README.md  VISION.md
cloudanalyzer/: README.md  pyproject.toml  requirements.txt  setup.py
cloudanalyzer-action/: Dockerfile  README.md  action.yml  entrypoint.sh
cloudanalyzer/ca/: __init__.py  align.py  baseline_history.py  batch.py  benchmark.py  bundle.py  compare.py  convert.py  crop.py  density_map.py  detection.py  diff.py  downsample.py  evaluate.py  filter.py  geometry.py  ground_evaluate.py  history.py  info.py  io.py  kitti.py  leaderboard.py  log.py  loop_closure_report.py  merge.py  metrics.py  mme.py  normals.py  object_eval.py  pareto.py  pipeline.py  plot.py  point_summary.py  posegraph.py  pr_comment.py  registration.py  report.py  report_paths.py  run_evaluate.py  sample.py  (+9 more)
cloudanalyzer/ca/core/: __init__.py  bag_ingest.py  cameras.py  check_baseline_evolution.py  check_scaffolding.py  check_triage.py  checks.py  gate.py  ground_evaluate.py  gs_renderer.py  image_evaluate.py  map_evaluate.py  plane_consistency.py  rendered_evaluate.py  slam_run.py  uncertainty_evaluate.py  web_progressive_loading.py  web_sampling.py  web_trajectory_sampling.py
cloudanalyzer/ca/experiments/: __init__.py  process_docs.py
cloudanalyzer/ca/experiments/bag_ingest/: README.md  __init__.py  common.py  extract_all.py  pointcloud.py  stream_decode.py  trajectory.py
cloudanalyzer/ca/experiments/check_baseline_evolution/: __init__.py  common.py  evaluate.py  pareto_promote.py  stability_window.py  threshold_guard.py
cloudanalyzer/ca/experiments/check_scaffolding/: __init__.py  common.py  evaluate.py  literal_profiles.py  object_sections.py  pipeline_overlays.py
cloudanalyzer/ca/experiments/check_triage/: __init__.py  common.py  evaluate.py  pareto_frontier.py  severity_weighted.py  signature_cluster.py
cloudanalyzer/ca/experiments/ground_evaluate/: __init__.py  common.py  evaluate.py  height_band.py  nearest_neighbor.py  voxel_confusion.py
cloudanalyzer/ca/experiments/map_evaluate/: __init__.py  common.py  evaluate.py  nn_thresholds.py  voxel_entropy.py
cloudanalyzer/ca/experiments/slam_run/: __init__.py  common.py  evaluate.py  identity_passthrough.py  kiss_icp_driver.py  kiss_slam_driver.py  small_gicp_driver.py
cloudanalyzer/ca/experiments/web_progressive_loading/: __init__.py  common.py  distance_shells.py  evaluate.py  grid_tiles.py  spatial_shuffle.py
cloudanalyzer/ca/experiments/web_sampling/: __init__.py  common.py  evaluate.py  functional_voxel.py  object_random.py  pipeline_hybrid.py
cloudanalyzer/ca/experiments/web_trajectory_sampling/: __init__.py  common.py  distance_accumulator.py  evaluate.py  turn_aware.py  uniform_stride.py
cloudanalyzer/ca/testing/: __init__.py  conformance.py
cloudanalyzer/cli/: main.py
cloudanalyzer/cloudanalyzer_cli/: __init__.py  main.py
cloudanalyzer/tests/: conftest.py  test_align.py  test_bag_ingest.py  test_baseline_history.py  test_batch.py  test_benchmark.py  test_bundle.py  test_cameras.py  test_check_baseline_evolution_process.py  test_check_scaffolding_process.py  test_check_suite.py  test_check_suite_image.py  test_check_suite_rendered.py  test_check_triage_process.py  test_cli.py  test_compare.py  test_convert.py  test_crop.py  test_density_map.py  test_detection_evaluate.py  test_detection_tracking_report.py  test_diff.py  test_docs_golden_path.py  test_downsample.py  test_driver_conformance.py  test_evaluate.py  test_filter.py  test_geometry.py  test_geometry_splat_ellipsoid.py  test_ground_evaluate.py  test_ground_evaluate_process.py  test_history.py  test_image_evaluate.py  test_info.py  test_io.py  test_kitti.py  test_leaderboard.py  test_logging.py  test_loop_closure_report.py  test_map_evaluate.py  (+54 more)
docs/: architecture.md  ci.md  decisions.md  driver-plugin.md  experiments.md  index.html  interfaces.md  release-v0.5.0-alpha.md  roadmap.md  tutorial-cloudini-benchmark.md  tutorial-map-quality-gate.md  tutorial-run-quality-gate.md  tutorial-slam-benchmark.md
notes/: mapeval_reference.md  plan.md
plugins/cloudanalyzer-driver-example/: README.md  pyproject.toml
plugins/cloudanalyzer-driver-example/src/cloudanalyzer_driver_example/: __init__.py  driver.py
scripts/: build_detection_tracking_demo.py  build_leaderboard.py  build_object_eval_examples.py  build_perception_demo.py  build_public_benchmark_pack.py  build_public_demo.py  build_readme_gif.sh  (+8 more)
(+518 files in other folders)
